--- a/package.json
+++ b/package.json
@@ -307,10 +307,79 @@
 				"when": "editorTextFocus && brief4vscode_enabled"
 			},
 			{
+				"key": "ctrl+/",
+				"command": "brief4vscode.comment_line",
+				"when": "editorTextFocus && !editorReadonly && brief4vscode_enabled"
+			},
+			{
 				"key": "alt+1",
 				"command": "brief4vscode.drop_bookmark",
 				"when": "editorTextFocus && brief4vscode_enabled",
 				"args": "1"
+			},
+			{
+				"key": "alt+2",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "2"
+			},
+			{
+				"key": "alt+3",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "3"
+			},
+			{
+				"key": "alt+4",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "4"
+			},
+			{
+				"key": "alt+5",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "5"
+			},
+			{
+				"key": "alt+6",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "6"
+			},
+			{
+				"key": "alt+7",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "7"
+			},
+			{
+				"key": "alt+8",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "8"
+			},
+			{
+				"key": "alt+9",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "9"
+			},
+			{
+				"key": "alt+0",
+				"command": "brief4vscode.drop_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled",
+				"args": "0"
+			},
+			{
+				"key": "alt+b",
+				"command": "brief4vscode.open_bookmarks_dialog",
+				"when": "editorTextFocus && brief4vscode_enabled"
+			},
+			{
+				"key": "alt+j",
+				"command": "brief4vscode.jump_bookmark",
+				"when": "editorTextFocus && brief4vscode_enabled"
 			}
 		]
 	},
